fix(slider): align tooltip anchor with thumb

--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -226,14 +226,16 @@
         z-index: 5;
         top: 0;
         left: var(--_rp-slider-fill-position);
+        width: var(--_rp-slider-thumb-size);
+        height: var(--_rp-slider-thumb-size);
         pointer-events: none;
         translate: -50% 0;
     }
 
     &__tooltip-anchor {
         display: block;
-        width: 0;
-        height: 0;
+        width: 100%;
+        height: 100%;
     }
 
     &__tooltip :deep(.rp-tooltip__content) {
